# OptimizedKernelsForRaspberryPi5

./: AUDIT_PLAN.md  CMakeLists.txt  FunctionsIncluded.md  README.md
benchmarks/: CMakeLists.txt  bench_common.hpp  bench_neon_fft.cpp  bench_neon_gemm.cpp  bench_neon_transcendentals.cpp  bench_radar_caf.cpp  bench_vulkan_matmul.cpp
cmake/: OptMathKernelsConfig.cmake.in
examples/: CMakeLists.txt  cuda_demo.cpp  demo.cpp
include/optmath/: cuda_backend.hpp  cuda_error.hpp  neon_kernels.hpp  radar_kernels.hpp  vulkan_backend.hpp
src/: CMakeLists.txt
src/cuda/: cuda_backend.cpp  cuda_complex.cu  cuda_kernels.cu  cuda_radar.cu
src/neon/: neon_complex.cpp  neon_conv2d.cpp  neon_gemm_optimized.cpp  neon_iir.cpp  neon_kernels.cpp  neon_linalg.cpp  neon_radar.cpp  neon_resample.cpp
src/platform/: platform.cpp
src/sve2/: sve2_complex.cpp  sve2_detect.cpp  sve2_kernels.cpp  sve2_radar.cpp
src/vulkan/: vulkan_backend.cpp
src/vulkan/shaders/: caf_doppler_shift.comp.glsl  caf_xcorr.comp.glsl  cfar_2d.comp.glsl  convolution_1d_optimized.comp.glsl  convolution_2d.comp.glsl  convolution_2d_optimized.comp.glsl  correlation_1d.comp.glsl  correlation_2d.comp.glsl  fft_radix2.comp.glsl  fft_radix2_optimized.comp.glsl  fft_radix4.comp.glsl  ifft_radix2.comp.glsl  ifft_radix4.comp.glsl  mat_add.comp.glsl  mat_elementwise_mul.comp.glsl  mat_mul.comp.glsl  mat_mul_tiled.comp.glsl  mat_outer_product.comp.glsl  mat_scale.comp.glsl  mat_sub.comp.glsl  mat_transpose.comp.glsl  mat_vec_mul.comp.glsl  reduce_complete.comp.glsl  reduce_max.comp.glsl  reduce_min.comp.glsl  reduce_sum.comp.glsl  scan_add_offsets.comp.glsl  scan_block_sums.comp.glsl  scan_local.comp.glsl  scan_prefix_sum.comp.glsl  vec_add.comp.glsl  vec_div.comp.glsl  vec_norm.comp.glsl  vec_sub.comp.glsl
tests/: CMakeLists.txt  test_basic.cpp  test_cuda_kernels.cpp  test_cuda_radar.cpp  test_neon_complex.cpp  test_neon_conv2d.cpp  test_neon_iir.cpp  test_neon_kernels.cpp  test_neon_resample.cpp  test_neon_transcendentals.cpp  test_platform.cpp  test_radar_caf.cpp  test_radar_cfar.cpp  test_sve2_kernels.cpp  test_vulkan_advanced.cpp  test_vulkan_dsp.cpp  test_vulkan_matrix.cpp  test_vulkan_vector.cpp
